# personal_coder

./: .task-49-test  CLAUDE.md  HISTORY.md  PROGRESS.md  README.md  test-task-133.txt  test-task-71.txt  test-task-72.txt  test-task-88.txt  test-task-89.txt  test-task-90.txt
claude-code-web-manager/: pyproject.toml
claude-code-web-manager/backend/: chat.py  database.py  executor.py  main.py  models.py  scheduler.py  task_registry.py  worktree.py
claude-code-web-manager/docs/: session-lifecycle.md  task-e2e-flow.md
claude-code-web-manager/frontend/: index.html  manifest.json  sw.js
claude-code-web-manager/scripts/: launcher.sh
claude-code-web-manager/tests/: test_api.py  test_concurrency.py  test_database.py  test_executor.py  test_scheduler.py  test_task_registry.py  test_worktree.py
claude-code-web-manager/tests/e2e/: test_kanban.py
data/: dev-tasks.json
scripts/: run-tasks.sh
tasks/: web_manager_plan.md
